--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "eslint": "eslint --ext .jsx --ext .js src/",
     "eslint-auto-fix": "^1.0.1",
     "start": "webpack-dev-server --open",
-    "test": "npm run eslint",
+    "test": "npm run eslint && npm run test.jest",
+    "test.jest": "jest",
     "fix-js": "eslint-auto-fix"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
     "@babel/preset-react": "7.8.3",
+    "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
     "eslint": "5.13.0",
     "eslint-auto-fix": "^1.0.1",
     "eslint-config-htmlacademy": "0.5.2",
+    "jest": "25.1.0",
+    "react-test-renderer": "16.12.0",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.2"
