--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   "dependencies": {
     "eslint-plugin-react": "^7.18.3",
     "leaflet": "1.6.0",
+    "moment": "^2.24.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "5.1.2"
   }
 }
