--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "7.8.4",
     "@babel/preset-env": "7.8.3",
     "@babel/preset-react": "7.8.3",
+    "axios-mock-adapter": "1.17.0",
     "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
     "enzyme": "3.11.0",
@@ -34,6 +35,7 @@
     "node": "10"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "eslint-plugin-react": "^7.18.3",
     "leaflet": "1.6.0",
     "moment": "^2.24.0",
@@ -43,6 +45,7 @@
     "react-redux": "7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "5.1.2",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   }
 }
