--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "eslint-plugin-react": "^7.18.3",
+    "history": "4.10.1",
     "leaflet": "1.6.0",
     "moment": "^2.24.0",
     "prop-types": "15.7.2",
